fix: Enable to click the connect button behind the refresh button

--- a/src/pwa/Refresh.module.scss
+++ b/src/pwa/Refresh.module.scss
@@ -1,11 +1,6 @@
 @import "mixins";
 
-.container {
-  @include flex(flex-end);
-}
-
 .button {
   @include flex;
-  margin: -10px;
   padding: 10px;
 }
